@@ -14,12 +14,13 @@
 
 package org.datacommons.tool;
 
+import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
 import static org.junit.Assert.assertEquals;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import org.datacommons.util.TmcfCsvParser;
@@ -32,6 +33,10 @@ import picocli.CommandLine;
 // directory, add an input directory and an output directory. In the input directory, put the test
 // files you want to run the lint tool against. In the output directory, put a report.json file with
 // the expected report output.
+//
+// These tests can be run in a mode to produce golden files, as below:
+//    mvn -DgoldenFilesPrefix=$PWD/tool/src/test/resources/org/datacommons/tool test
+//
 public class GenMcfTest {
   @Rule public TemporaryFolder testFolder = new TemporaryFolder();
 
@@ -40,10 +45,14 @@ public class GenMcfTest {
     // Set this so that the generated node IDs are deterministic
     TmcfCsvParser.TEST_mode = true;
 
+    String goldenFilesPrefix = System.getProperty("goldenFilesPrefix");
+    goldenFilesPrefix =
+        "/Users/shanth/work/git/import/tool/src/test/resources/org/datacommons" + "/tool";
     Main app = new Main();
     CommandLine cmd = new CommandLine(app);
     File[] testDirectories = new File(resourceFile("genmcf")).listFiles(File::isDirectory);
     for (File directory : testDirectories) {
+      System.err.println("Processing " + directory.getName());
       List<String> argsList = new ArrayList<>();
       argsList.add("genmcf");
       File[] inputFiles = new File(Path.of(directory.getPath(), "input").toString()).listFiles();
@@ -53,17 +62,29 @@ public class GenMcfTest {
       argsList.add("--output-dir=" + testFolder.getRoot().getPath());
       String[] args = argsList.toArray(new String[argsList.size()]);
       cmd.execute(args);
-      String actualReportString = TestUtil.getStringFromTestFile(testFolder, "report.json");
-      String expectedReportString = TestUtil.getStringFromOutputReport(directory.getPath());
-      TestUtil.assertReportFilesAreSimilar(directory, expectedReportString, actualReportString);
 
-      String actualGeneratedFilePath =
-          Paths.get(testFolder.getRoot().getPath(), "generated.mcf").toString();
-      String expectedGeneratedFilePath =
-          Path.of(directory.getPath(), "output", "generated.mcf").toString();
-      assertEquals(
-          org.datacommons.util.TestUtil.mcfFromFile(expectedGeneratedFilePath),
-          org.datacommons.util.TestUtil.mcfFromFile(actualGeneratedFilePath));
+      Path actualGeneratedFilePath = TestUtil.getTestFilePath(testFolder, "generated.mcf");
+      Path actualReportPath = TestUtil.getTestFilePath(testFolder, "report.json");
+
+      if (goldenFilesPrefix != null && !goldenFilesPrefix.isEmpty()) {
+        Path goldenGeneratedPath =
+            Path.of(goldenFilesPrefix, "genmcf", directory.getName(), "output", "generated.mcf");
+        Files.copy(actualGeneratedFilePath, goldenGeneratedPath, REPLACE_EXISTING);
+        Path goldenReportPath =
+            Path.of(goldenFilesPrefix, "genmcf", directory.getName(), "output", "report.json");
+        TestUtil.writeSortedReport(actualReportPath, goldenReportPath);
+      } else {
+        Path expectedGeneratedFilePath =
+            TestUtil.getOutputFilePath(directory.getPath(), "generated.mcf");
+        Path expectedReportPath = TestUtil.getOutputFilePath(directory.getPath(), "report.json");
+        TestUtil.assertReportFilesAreSimilar(
+            directory,
+            TestUtil.readStringFromPath(expectedReportPath),
+            TestUtil.readStringFromPath(actualReportPath));
+        assertEquals(
+            org.datacommons.util.TestUtil.mcfFromFile(expectedGeneratedFilePath.toString()),
+            org.datacommons.util.TestUtil.mcfFromFile(actualGeneratedFilePath.toString()));
+      }
     }
   }
 
